[tool.poetry]
name = "py-tdd"
version = "0.1.0"
description = ""
authors = ["DerDer <mr.markctwang@gmail.com>"]
readme = "README.md"
packages = [{include = "tdd_hello_world"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
